@@ -1,5 +1,10 @@
 2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * src/seahorse-key-store-manager.c: Fix crasher #355157
+    in key store model. Also follow sort column from gconf.
+    
+2006-09-09  Nate Nielsen  <nielsen@memberwebs.com>
+
     * agent/Makefile.am:
     * daemon/Makefile.am:
     * libcryptui/Makefile.am:
